--- a/o-nama.html
+++ b/o-nama.html
@@ -139,7 +139,7 @@
                   <div class="accordion" id="faqAccordion">
                       <div class="accordion-item border-0 wow fadeInUp" data-wow-delay="0.2s">
                           <h2 class="accordion-header" id="headingOne">
-                              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">Koja su potrebna dokumenta za upis u Auto školu?</button>
+                              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">Koja su dokumenta potrebna za upis u auto školu?</button>
                           </h2>
                           <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#faqAccordion">
                               <div class="accordion-body">
@@ -150,7 +150,7 @@
                       </div>
                       <div class="accordion-item border-0 wow fadeInUp" data-wow-delay="0.3s">
                           <h2 class="accordion-header" id="headingTwo">
-                              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Ako imam 16 godina, da li je bolje početi obuku odmah ili sačekati do 17. godine?</button>
+                              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Ako imam 16 godina, da li je bolje početi obuku odmah ili sačekati da napunim 17. godine?</button>
                           </h2>
                           <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#faqAccordion">
                               <div class="accordion-body">
